--- a/TodoList/src/TodoList.Web/Views/Shared/_Layout.cshtml
+++ b/TodoList/src/TodoList.Web/Views/Shared/_Layout.cshtml
@@ -7,17 +7,15 @@
 
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-            <link rel="stylesheet" href="~/lib/bootstrap-touch-carousel/dist/css/bootstrap-touch-carousel.css" />
+            <link rel="stylesheet" href="~/lib/toastr/toastr.css" />
             <link rel="stylesheet" href="~/css/site.css" />
         </environment>
         <environment names="Staging,Production">
             <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/css/bootstrap.min.css"
                   asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css"
-                  asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden" />
-            <link rel="stylesheet" href="//ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
-                  asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
-                  asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
-            <link rel="stylesheet" href="~/css/site.css" asp-file-version="true" />
+                  asp-fallback-test-class="hidden" asp-fallback-test-property="visibility" asp-fallback-test-value="hidden"/>
+            <link rel="stylesheet" href="~/lib/toastr/toastr.min.css" asp-file-version="true" />
+            <link rel="stylesheet" href="~/css/site.min.css" asp-file-version="true" />
         </environment>
     </head>
     <body>
@@ -34,8 +32,6 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
                     @await Html.PartialAsync("_LoginPartial")
                 </div>
@@ -51,28 +47,27 @@
 
         <environment names="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
-            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-            <script src="~/lib/hammer.js/hammer.js"></script>
-            <script src="~/lib/bootstrap-touch-carousel/dist/js/bootstrap-touch-carousel.js"></script>
+            <script src="~/lib/toastr/toastr.js"></script>
+            <script src="~/lib/angular/angular.js"></script>
+            <script src="~/lib/angular-resource/angular-resource.js"></script>
+            <script src="~/js/app.js" asp-file-version="true"></script>
+            <script src="~/js/config.js" asp-file-version="true"></script>
+            <script src="~/js/common/logger.js" asp-file-version="true"></script>
+            <script src="~/js/services/todo.js" asp-file-version="true"></script>
+            <script src="~/js/controllers/todoController.js" asp-file-version="true"></script>
         </environment>
         <environment names="Staging,Production">
             <script src="//ajax.aspnetcdn.com/ajax/jquery/jquery-2.1.4.min.js"
                     asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
                     asp-fallback-test="window.jQuery">
             </script>
-            <script src="//ajax.aspnetcdn.com/ajax/bootstrap/3.0.0/bootstrap.min.js"
-                    asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                    asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
+            <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"
+                    asp-fallback-src="~/lib/angular/angular.js"
+                    asp-fallback-test="window.angular">
             </script>
-            <script src="//ajax.aspnetcdn.com/ajax/hammer.js/2.0.4/hammer.min.js"
-                    asp-fallback-src="~/lib/hammer.js/hammer.js"
-                    asp-fallback-test="window.Hammer">
-            </script>
-            <script src="//ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/js/bootstrap-touch-carousel.js"
-                    asp-fallback-src="~/lib/bootstrap-touch-carousel/dist/js/bootstrap-touch-carousel.js"
-                    asp-fallback-test="window.Hammer && window.Hammer.Instance">
-            </script>
-            <script src="~/js/site.js" asp-file-version="true"></script>
+            <script src="~/lib/angular-resource/angular-resource.min.js"></script>
+            <script src="~/lib/toastr/toastr.min.js"></script>
+            <script src="~/js/site.min.js" asp-file-version="true"></script>
         </environment>
 
         @RenderSection("scripts", required: false)
