Updated Styles and Readme.

--- a/TodoList/src/TodoList.Web/wwwroot/css/site.css
+++ b/TodoList/src/TodoList.Web/wwwroot/css/site.css
@@ -15,6 +15,12 @@
     margin: 0 auto;
 }
 
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
 /* Todo */
 
 body {
@@ -47,6 +53,10 @@ li.ui-state-default {
     background-color: #F4FCE8;
     margin: 0 -20px -10px -20px;
     padding: 10px 20px;
+}
+
+.add-todo {
+    max-width: 100%;
 }
 
 .done-true {
